<resources>

    <string name="app_name">My profile</string>

    <string name="user_name">User name</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="profile_photo">Profile photo</string>

    <!--    Auth -->
    <string name="get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_profile">Fill out the profile and go to the application</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="error_email">Incorrect E-Mail address</string>
    <string name="error_password">Your password must be %1$d – %2$d characters</string>
    <string name="google">google</string>
    <string name="or">or</string>
    <string name="register">register</string>
    <string name="agree_to_terms">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>

    <!--    Settings-->
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="go_to_settings">Go to settings and fill out the profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="edit_profile">Edit profile</string>


    <!--    Contacts list-->
    <string name="contacts">Contacts</string>
    <string name="contact_photo">Contact\'s photo</string>
    <string name="delete_icon">Delete icon</string>
    <string name="contact_deleted">The contact has been deleted.</string>
    <string name="undo">UNDO</string>
    <string name="add_contacts">Add contacts</string>
    <string name="search">Search</string>
    <string name="fab_delete">Delete contacts</string>
    <string name="add" translatable="false">Add</string>
    <string name="contact_added">Contact added</string>
    <string name="users">Users</string>
    <string name="no_internet_warning">Internet Connection failed. You can\'t add and delete contacts</string>


    <!--    Add contact-->
    <string name="add_contact">Add contact</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="save">Save</string>
    <string name="error_username">Your username must be at least %1$d characters long</string>
    <string name="back">Back</string>
    <string name="add_photo">Add photo</string>

    <!--    Detail view-->
    <string name="message">message</string>
    <string name="profile">Profile</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="transition_name" translatable="false">detail_photo</string>

    <!--    Login view-->
    <string name="hello">Hello!</string>
    <string name="enter_email_and_password">Enter your email and password below</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">login</string>
    <string name="cancel">Cancel</string>
    <string name="forward">Forward</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="your_profile_data">Your profile data</string>


    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>

    <!-- SignUp Fragment   -->
    <string name="user_exists">User already exists</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="access_denied">Access denied</string>
    <string name="invalid_request">Invalid request</string>
    <string name="no_user">There is no such user</string>
    <string name="unknown_error">Error</string>
    <string name="internet_connection_failed">Internet Connection failed</string>

    <!--    Notifications-->
    <string name="search_channel_name">Search</string>
    <string name="search_title">Search</string>
    <string name="go_to_search">Go to Search page</string>
    <string name="go_button">Go</string>
    <string name="dismiss">Dismiss</string>
    <string name="rational_dialog_text">Please go to the app settings and enable notifications.</string>

</resources>