<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upper_part"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:background="@color/dark_blue"
        android:padding="4dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="6dp"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/settings"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="32dp"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintDimensionRatio="W,1"
            app:layout_constraintTop_toBottomOf="@id/settings"
            app:layout_constraintBottom_toTopOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="60dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mokeup"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profile_photo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo"
            app:layout_constraintBottom_toTopOf="@id/career"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/user_name"/>

        <TextView
            android:id="@+id/career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:textSize="18sp"
            android:textColor="@color/light_grey"
            android:text="@string/career"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/career"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textColor="@color/light_grey"
            android:text="@string/home_address"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/bottom_part"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_button"
            app:layout_constraintBottom_toTopOf="@id/contacts_button"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/edit_profile"
            style="@style/ButtonStroke"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contacts_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/view_my_contacts"
            style="@style/ButtonOrange"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
