<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true"
    android:paddingHorizontal="@dimen/basic_layout_horizontal_margins"
    android:paddingVertical="@dimen/basic_layout_vertical_margins">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/h1"
            app:layout_constraintBottom_toTopOf="@id/fill_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/fill_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_8"
            android:text="@string/enter_email_and_password"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/h4"
            app:layout_constraintBottom_toTopOf="@id/email_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:theme="@style/TextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/password_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fill_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="?attr/colorOnPrimary" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:theme="@style/TextInputLayout"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/checkbox_remember_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:checked="true"
            android:text="@string/remember_me"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/h3"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            app:useMaterialThemeColors="false" />

        <TextView
            android:id="@+id/forget_password"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/h3"
            app:layout_constraintTop_toTopOf="@id/checkbox_remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_remember_me"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/ButtonPrimaryOutlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/dont_have_account_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dont_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/don_t_have_account"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="@dimen/h3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sign_up"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <TextView
            android:id="@+id/sign_up"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dont_have_account_text" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>