<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/profile"
        app:titleCentered="true" />

    <View
        android:id="@+id/upper_part"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/profile_photo"
        android:transitionName="@string/transition_name"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintDimensionRatio="W,1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.3"
        tools:src="@drawable/ic_mockup" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/h2"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo"
        app:layout_constraintVertical_bias="0.18"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/h3"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintVertical_bias="0"
        tools:text="@string/career" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="@dimen/h3"
        app:layout_constraintBottom_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_career"
        app:layout_constraintVertical_bias="0.2"
        tools:text="@string/home_address" />

    <ImageView
        android:id="@+id/ic_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook"
        android:src="@drawable/ic_facebook"
        app:layout_constraintBottom_toTopOf="@id/btn_message"
        app:layout_constraintEnd_toStartOf="@id/ic_linkedin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/ic_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/linkedin"
        android:src="@drawable/ic_linkedin"
        app:layout_constraintBottom_toTopOf="@id/btn_message"
        app:layout_constraintEnd_toStartOf="@id/ic_instagram"
        app:layout_constraintStart_toEndOf="@id/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/ic_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/instagram"
        android:src="@drawable/ic_insta"
        app:layout_constraintBottom_toTopOf="@id/btn_message"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/ic_linkedin"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_social_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:constraint_referenced_ids="ic_facebook,ic_linkedin,ic_instagram"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_message"
        style="@style/ButtonTextCaps"
        android:layout_width="0dp"
        android:layout_height="@dimen/big_button_height"
        android:text="@string/message"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/basic_layout_horizontal_margins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/basic_layout_horizontal_margins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/basic_layout_vertical_margins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/basic_layout_vertical_margins" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>