<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/contact_height"
    android:background="@drawable/recyclerview_item_shape"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:padding="@dimen/margin_8"
    android:weightSum="6">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/contact_photo"
        android:transitionName="detail_photo"
        tools:src="@drawable/profile_picture" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/AppTextAppearance"
            android:textColor="?attr/colorOnSurface"
            android:textSize="@dimen/h2"
            tools:text="John Smith John Smith John Smith John Smith " />

        <TextView
            android:id="@+id/tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Financier" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/add_contact_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/AppTextAppearance"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/h2"
            android:text="@string/add" />

        <ImageView
            android:id="@+id/ic_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_contact"
            android:paddingStart="@dimen/margin_8"
            android:src="@drawable/ic_add_contact"
            android:textAppearance="@style/AppTextAppearance" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/ic_add_contact_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/contact_added"
        android:padding="@dimen/margin_12"
        android:src="@drawable/ic_contact_added"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>