<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:padding="@dimen/margins_perimeter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:textColor="@color/white"
            android:textSize="@dimen/h1"
            android:text="@string/get_acquainted"/>

        <TextView
            android:id="@+id/fill_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/fill_out_profile"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fill_profile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textColor="@color/grey_text_2"
            android:textSize="18sp"/>
        
        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            android:inputType="textEmailAddress"/>


        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_edit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="@color/grey_text_2"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text"
            android:layout_marginTop="40dp"
            style="?attr/textInputFilledStyle"
            app:boxBackgroundColor="@color/blue"
            android:textColor="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"

                />

        </com.google.android.material.textfield.TextInputLayout>



        
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/password_text"
            app:layout_constraintTop_toBottomOf="@id/password_edit"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>





</FrameLayout>